RegressionTests/TestSuiteExport/accept/types.blade
// EXPECT: pass

cog task main() {
    cog var a: u32 = 0;
    cog var b: bool = true;
    cog var c: uint(5) = 0;
    cog var d: [32]nib = undefined;
    cog var e: *cog u32 = undefined;
    cog var f: *cog const u8 = undefined;
}