RegressionTests/TestSuiteExport/reject/inline_asm_missing_operand.blade
// EXPECT: fail
// DIAGNOSTICS: InlineAsmMissingOperand

fn f() void {
    var x: u32 = 0;
    asm {
        MOV {x},
    };
}
